--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
 				</div>
 			</div>
 
-		<div data-tf-widget="RJhyz0Zd" data-tf-opacity="100" data-tf-iframe-props="title=My typeform" data-tf-transitive-search-params data-tf-medium="snippet" style="width:100%;height:500px;" id="apply-section"></div><script src="//embed.typeform.com/next/embed.js"></script>
+			<div data-tf-widget="RJhyz0Zd" data-tf-opacity="100" data-tf-iframe-props="title=My typeform" data-tf-transitive-search-params data-tf-medium="snippet" style="width:100%;height:500px;"></div><script src="//embed.typeform.com/next/embed.js"></script>
+			
+			
+	
 		</div>
 
 		</div>
